--- a/Assignment_1.ipynb
+++ b/Assignment_1.ipynb
@@ -36,27 +36,16 @@
     {
       "cell_type": "code",
       "source": [
-        "s = \"Hi there Sam!\""
-      ],
-      "metadata": {
-        "id": "s07c7JK7Oqt-"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "s = \"Hi there Sam!\"\n",
         "x=s.split()\n",
         "print(x)"
       ],
       "metadata": {
-        "id": "6mGVa3SQYLkb",
+        "id": "s07c7JK7Oqt-",
+        "outputId": "304891b8-b495-4ee0-d69c-bea64940c5d2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "eeaede9a-163e-4d10-8949-6977e18bb7e1"
+        }
       },
       "execution_count": 1,
       "outputs": [
@@ -68,6 +57,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "6mGVa3SQYLkb"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -89,39 +87,17 @@
       "metadata": {
         "id": "_ZHoml3kPqic"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [
-        "x=\"The diameter of {planet} is {diameter} kilometer\".format(planet=\"Earth\",diameter=12742)\n",
-        "print(x)\n"
-      ],
-      "metadata": {
-        "id": "HyRyJv6CYPb4",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "e71b171d-e2cf-4ee9-c5cc-240c8e7c3c5b"
-      },
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "The diameter of Earth is 12742 kilometer\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "source": [],
       "metadata": {
-        "id": "JyHQ-wNjoYr8"
-      }
+        "id": "HyRyJv6CYPb4"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -140,32 +116,17 @@
       "metadata": {
         "id": "fcVwbCc1QrQI"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [
-        "d = {'k1':[1,2,3,{'tricky':['oh','man','inception',{'target':[1,2,3,'hello']}]}]}\n",
-        "print(d['k1'][3][\"tricky\"][3]['target'][3])"
-      ],
+      "source": [],
       "metadata": {
-        "id": "MvbkMZpXYRaw",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "2dc0fb20-94a3-46d8-8bc4-bd99b8296d92"
+        "id": "MvbkMZpXYRaw"
       },
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "hello\n"
-          ]
-        }
-      ]
+      "execution_count": 2,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -207,12 +168,12 @@
       ],
       "metadata": {
         "id": "NHrirmgCYXvU",
+        "outputId": "809ebd85-7779-4d06-b45a-6ad8a9848d21",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "a9866355-6f04-4919-cb0c-9c11ed849631"
+        }
       },
-      "execution_count": 12,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -228,23 +189,23 @@
       "cell_type": "code",
       "source": [
         "array=np.ones(10)*5\n",
-        "print(\"An array of 10 fives:\")\n",
+        "print(\"An array of 10 zeros:\")\n",
         "print(array)"
       ],
       "metadata": {
         "id": "e4005lsTYXxx",
+        "outputId": "4c75baf7-bb25-4cd4-8096-769ebfda5dd7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "6558c59d-1629-4e7a-ab1e-deb2c5074cd3"
+        }
       },
-      "execution_count": 13,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "An array of 10 fives:\n",
+            "An array of 10 zeros:\n",
             "[5. 5. 5. 5. 5. 5. 5. 5. 5. 5.]\n"
           ]
         }
@@ -264,23 +225,23 @@
       "source": [
         "import numpy as np\n",
         "array=np.arange(20,36,2)\n",
-        "print(\"Array of all the even integers from 20 to 35\")\n",
+        "print(\"Array of all the even integers from 30 to 70\")\n",
         "print(array)"
       ],
       "metadata": {
         "id": "oAI2tbU2Yag-",
+        "outputId": "406369fb-2f8d-49f9-a716-794cd95979b8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "0113190c-fa71-4d69-bf32-b04651db314b"
+        }
       },
-      "execution_count": 16,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Array of all the even integers from 20 to 35\n",
+            "Array of all the even integers from 30 to 70\n",
             "[20 22 24 26 28 30 32 34]\n"
           ]
         }
@@ -299,25 +260,25 @@
       "cell_type": "code",
       "source": [
         "import numpy as np\n",
-        "x = np.arange(1, 10).reshape(3,3)\n",
+        "x = np.arange(0,9).reshape(3,3)\n",
         "print(x)"
       ],
       "metadata": {
         "id": "tOlEVH7BYceE",
+        "outputId": "1dbe4a7d-f978-4795-bf7c-065ffffc1a89",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "b9d4ac0c-796e-4412-edd7-20e8609b3903"
+        }
       },
-      "execution_count": 17,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[1 2 3]\n",
-            " [4 5 6]\n",
-            " [7 8 9]]\n"
+            "[[0 1 2]\n",
+            " [3 4 5]\n",
+            " [6 7 8]]\n"
           ]
         }
       ]
@@ -335,19 +296,18 @@
     {
       "cell_type": "code",
       "source": [
-        "a = np.array([1, 2, 3])\n",
-        "b = np.array([4, 5, 6])\n",
-        "np.concatenate((a,b),axis=None)\n",
-        "\n"
+        "a = np.array([1,2,3])\n",
+        "b = np.array([4,5,6])\n",
+        "np.concatenate((a,b),axis=None)"
       ],
       "metadata": {
         "id": "rAPSw97aYfE0",
+        "outputId": "529dd0cc-fcdc-403f-deb7-d11038478fe6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "c76e1c63-2484-41ec-d8e2-141e0812ab2f"
+        }
       },
-      "execution_count": 30,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -357,7 +317,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 30
+          "execution_count": 11
         }
       ]
     },
@@ -387,39 +347,39 @@
       "metadata": {
         "id": "T5OxJRZ8uvR7"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "import pandas as pd\n",
-        "data = [[10,\"Rajesh\"],[20,\"deepak\"],[30,\"Ravi\"]]\n",
-        "df = pd.DataFrame(data, columns=['Numbers','Student Names'])\n",
+        "data=[[10,\"Rajesh\"],[20,\"deepak\"],[30,\"ravi\"]]\n",
+        "df=pd.DataFrame(data,columns=[\"Numbers\",\"student names\",])\n",
         "df"
       ],
       "metadata": {
         "id": "xNpI_XXoYhs0",
+        "outputId": "871363e7-8516-43bc-dddf-55a54ade4910",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 143
-        },
-        "outputId": "69729e49-b9cf-477e-92a3-da63b1d3ac12"
+        }
       },
-      "execution_count": 27,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "   Numbers Student Names\n",
+              "   Numbers student names\n",
               "0       10        Rajesh\n",
               "1       20        deepak\n",
-              "2       30          Ravi"
+              "2       30          ravi"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-37bc13d2-7671-4554-bd5b-6b1eb1b2afca\">\n",
+              "  <div id=\"df-567c1ed1-9802-4924-a761-1d145edaf325\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -440,7 +400,7 @@
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
               "      <th>Numbers</th>\n",
-              "      <th>Student Names</th>\n",
+              "      <th>student names</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -457,12 +417,12 @@
               "    <tr>\n",
               "      <th>2</th>\n",
               "      <td>30</td>\n",
-              "      <td>Ravi</td>\n",
+              "      <td>ravi</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-37bc13d2-7671-4554-bd5b-6b1eb1b2afca')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-567c1ed1-9802-4924-a761-1d145edaf325')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -513,12 +473,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-37bc13d2-7671-4554-bd5b-6b1eb1b2afca button.colab-df-convert');\n",
+              "          document.querySelector('#df-567c1ed1-9802-4924-a761-1d145edaf325 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-37bc13d2-7671-4554-bd5b-6b1eb1b2afca');\n",
+              "          const element = document.querySelector('#df-567c1ed1-9802-4924-a761-1d145edaf325');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -541,7 +501,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 13
         }
       ]
     },
@@ -557,12 +517,15 @@
     {
       "cell_type": "code",
       "source": [
-        "dtype: object"
+        "import pandas as pd\n",
+        "p = pd.date_range(start='1-1-2003',end = '2-10-2023')\n",
+        "for val in p:\n",
+        "  print(val)"
       ],
       "metadata": {
         "id": "dgyC0JhVYl4F"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -593,32 +556,32 @@
       "cell_type": "code",
       "source": [
         "import pandas as pd\n",
-        "lists = [[1,'aaa',22], [2,'bbb',25], [3,'ccc',24]]\n",
-        "lists = pd.DataFrame(lists, columns=['S.no','Student Names','Marks'])\n",
+        "lists = [[1,'aaa',22],[2,'bbb',25],[3,'ccc',24]]\n",
+        "lists = pd.DataFrame(lists,columns=['S.no','student names','marks'])\n",
         "lists"
       ],
       "metadata": {
         "id": "knH76sDKYsVX",
+        "outputId": "ff83ea77-e375-4dba-cff0-dd0b24475c0f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 143
-        },
-        "outputId": "838cd828-fa33-4f1c-f631-c78ccdf0e6aa"
+        }
       },
-      "execution_count": 29,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "   S.no Student Names  Marks\n",
+              "   S.no student names  marks\n",
               "0     1           aaa     22\n",
               "1     2           bbb     25\n",
               "2     3           ccc     24"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-9b0083c5-eb0f-4249-b844-8d764f0c0c66\">\n",
+              "  <div id=\"df-f9a65839-45cc-4e1f-9859-afaf180f410f\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -639,8 +602,8 @@
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
               "      <th>S.no</th>\n",
-              "      <th>Student Names</th>\n",
-              "      <th>Marks</th>\n",
+              "      <th>student names</th>\n",
+              "      <th>marks</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -665,7 +628,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9b0083c5-eb0f-4249-b844-8d764f0c0c66')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f9a65839-45cc-4e1f-9859-afaf180f410f')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -716,12 +679,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-9b0083c5-eb0f-4249-b844-8d764f0c0c66 button.colab-df-convert');\n",
+              "          document.querySelector('#df-f9a65839-45cc-4e1f-9859-afaf180f410f button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-9b0083c5-eb0f-4249-b844-8d764f0c0c66');\n",
+              "          const element = document.querySelector('#df-f9a65839-45cc-4e1f-9859-afaf180f410f');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -744,7 +707,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 29
+          "execution_count": 17
         }
       ]
     }
